--- a/frontend/src/i18n/locales/rw/translation.json
+++ b/frontend/src/i18n/locales/rw/translation.json
@@ -107,43 +107,50 @@
   "auth": {
     "login": {
       "title": "Injira",
-      "email": "Imeri",
-      "password": "Ijambo ryibanga",
+      "email": "Imeyili",
+      "password": "Ijambo ry'ibanga",
       "button": "Injira",
       "buttonLoading": "Urimo kwinjira...",
-      "noAccount": "Nta konti ufite? Iyandikishe"
+      "noAccount": "Nta konti ufite? Iyandikishe hano"
     },
     "register": {
       "title": "Iyandikishe",
-      "firstName": "Izina",
-      "lastName": "Izina ry'umuryango",
-      "email": "Imeri",
-      "password": "Ijambo ryibanga",
-      "confirmPassword": "Emeza ijambo ryibanga",
-      "phoneNumber": "Numero ya telefoni",
+      "firstName": "Izina rya mbere",
+      "lastName": "Izina rya nyuma",
+      "email": "Imeyili",
+      "password": "Ijambo ry'ibanga",
+      "confirmPassword": "Emeza ijambo ry'ibanga",
+      "phoneNumber": "Telefoni",
       "button": "Iyandikishe",
       "buttonLoading": "Urimo kwiyandikisha...",
-      "haveAccount": "Usanzwe ufite konti? Injira",
-      "firstNameRequired": "Izina rirakenewe",
-      "firstNameMin": "Izina rigomba kugira inyuguti 2 byibuze",
-      "lastNameRequired": "Izina ry'umuryango rirakenewe",
-      "lastNameMin": "Izina ry'umuryango rigomba kugira inyuguti 2 byibuze",
-      "passwordMin": "Ijambo ryibanga rigomba kugira inyuguti 6 byibuze",
-      "passwordNumber": "Ijambo ryibanga rigomba kugira umubare umwe byibuze",
-      "passwordUppercase": "Ijambo ryibanga rigomba kugira inyuguti nkuru imwe byibuze",
-      "passwordsMatch": "Amagambo yibanga agomba guhura",
-      "confirmPasswordRequired": "Kwemeza ijambo ryibanga birakenewe",
+      "firstNameRequired": "Izina rya mbere rirakenewe",
+      "firstNameMin": "Izina rya mbere rigomba kugira inyuguti 2 byibuze",
+      "lastNameRequired": "Izina rya nyuma rirakenewe",
+      "lastNameMin": "Izina rya nyuma rigomba kugira inyuguti 2 byibuze",
+      "passwordMin": "Ijambo ry'ibanga rigomba kugira inyuguti 6 byibuze",
+      "passwordNumber": "Ijambo ry'ibanga rigomba kugira umubare umwe byibuze",
+      "passwordUppercase": "Ijambo ry'ibanga rigomba kugira inyuguti nkuru imwe byibuze",
+      "passwordsMatch": "Amagambo y'ibanga agomba guhura",
+      "confirmPasswordRequired": "Emeza ijambo ry'ibanga birakenewe",
       "invalidPhone": "Numero ya telefoni ntiyemewe",
-      "successMessage": "Kwiyandikisha byagenze neza! Nyamuneka emeza imeri yawe ukoresheje kode yoherejwe.",
+      "successMessage": "Kwiyandikisha byagenze neza! Nyamuneka emeza imeyili yawe ukoresheje kode yoherejwe.",
       "error": "Hari ikibazo cyabaye mu gihe cyo kwiyandikisha"
     },
     "verification": {
-      "title": "Emeza Imeri",
-      "message": "Nyamuneka andika kode yemeza yoherejwe kuri imeri yawe",
+      "title": "Emeza Imeyili",
+      "message": "Nyamuneka andika kode yemeza yoherejwe kuri imeyili yawe",
       "code": "Kode yo kwemeza",
       "button": "Emeza",
       "buttonLoading": "Urimo kwemeza...",
       "resend": "Rongera wohereze kode"
+    },
+    "forgotPassword": {
+      "title": "Wibagiwe Ijambo ry'ibanga",
+      "description": "Andika imeyili yawe maze tuzakoherereze link yo guhindura ijambo ry'ibanga.",
+      "submit": "Ohereza Link",
+      "success": "Link yo guhindura ijambo ry'ibanga yoherejwe kuri imeyili yawe.",
+      "error": "Ntabwo twashoboye kohereza link. Nyamuneka ongera ugerageze.",
+      "link": "Wibagiwe ijambo ry'ibanga?"
     }
   },
   "home": {
